Launch article draft and prose updates

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,9 +1,8 @@
 ---
-import { RiDiscordFill } from "react-icons/ri";
 import siteInfo from "~/data/site-info";
 import Logo from "./Logo.astro";
 
-const { socialLinks, urls } = siteInfo;
+const { urls } = siteInfo;
 ---
 
 <header>
