--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -24,7 +24,7 @@ import BaseLayout from "~/layouts/BaseLayout.astro";
   }
 
   img {
-    mix-blend-mode: multiply;
+    mix-blend-mode: luminosity;
     width: 92px;
   }
 
