--- a/src/pages/blog/[id].astro
+++ b/src/pages/blog/[id].astro
@@ -110,8 +110,8 @@ const authors = await getEntries(data.authors);
 
   .avatar {
     border-radius: 100%;
-    filter: grayscale(100%) contrast(140%);
-    mix-blend-mode: multiply;
+    filter: grayscale(100%);
+    mix-blend-mode: luminosity;
     user-select: none;
   }
 
