Blog tagline change

--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -12,13 +12,10 @@ const sortedPosts = posts.sort(
 
 <BaseLayout
   title="Blog"
-  description="Get all the latest news from Namesake."
+  description="The latest news from Namesake."
   color="blue"
 >
-  <PageHeader
-    title="Blog"
-    description="Get all the latest news from Namesake."
-  />
+  <PageHeader title="Blog" description="The latest news from Namesake." />
   <div class="posts">
     {
       sortedPosts.length ? (
