--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -172,7 +172,7 @@ const linkGroups: LinkGroup[] = [
       position: absolute;
       left: 100%;
       bottom: -4px;
-      mix-blend-mode: luminosity;
+      mix-blend-mode: multiply;
       user-select: none;
       animation: snailing 300s infinite linear;
       // Offset start
