--- a/src/layouts/ProseLayout.astro
+++ b/src/layouts/ProseLayout.astro
@@ -219,6 +219,7 @@ const {
       margin-block: calc(var(--space-m) * 2);
       padding-inline: var(--space-m);
       font-size: var(--step-1);
+      hyphens: auto;
     }
 
     blockquote cite {
