Allow setting annotation type per blog post

--- a/src/layouts/ProseLayout.astro
+++ b/src/layouts/ProseLayout.astro
@@ -84,6 +84,7 @@ const {
         iterations: 1,
         animate: false,
         multiline: true,
+        strokeWidth: 2,
       });
       highlight.show();
     }
