--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -9,7 +9,8 @@ const { urls } = siteInfo;
   <a href="/" aria-label="Namesake homepage" id="logo"><Logo /></a>
   <nav>
     <a href="/blog" class="button ghost small">Blog</a>
-    <a href={urls.app} class="button primary small">Go to App</a>
+    <a href="/donate" class="button secondary small">Donate</a>
+    <a href={urls.app} class="button primary small">Sign In or Register</a>
   </nav>
 </header>
 
