Add donate link and fix visuals

--- a/src/components/ArticleLink.astro
+++ b/src/components/ArticleLink.astro
@@ -1,5 +1,8 @@
 ---
 import dayjs from "dayjs";
+import utc from "dayjs/plugin/utc";
+
+dayjs.extend(utc);
 
 interface Props {
   title: string;
@@ -19,7 +22,7 @@ const { title, date, url, subhead, authors, description, image } = Astro.props;
 
 <div class="article">
   <time class="date" datetime={date.toISOString()}>
-    {dayjs(date).format("MMMM DD, YYYY")}
+    {dayjs.utc(date).format("MMMM DD, YYYY")}
   </time>
   {subhead && <strong class="subhead">{subhead}</strong>}
   <a href={url} class="title">
@@ -78,14 +81,12 @@ const { title, date, url, subhead, authors, description, image } = Astro.props;
     order: -1;
     max-width: 600px;
     margin-block-end: var(--space-s);
-    filter: grayscale(100%) contrast(180%) brightness(140%);
-    opacity: 0.9;
-    mix-blend-mode: multiply;
+    filter: grayscale(100%);
+    mix-blend-mode: luminosity;
+    transform: translate3d(0, 0, 0); // Safari bugfix
 
     img {
       border-radius: 3px;
-      // object-fit: cover;
-      // aspect-ratio: 5 / 3;
     }
   }
 </style>
