--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -5,21 +5,21 @@ import PageHeader from "~/components/PageHeader.astro";
 import BaseLayout from "~/layouts/BaseLayout.astro";
 
 const posts = await getCollection("posts");
+const sortedPosts = posts.sort(
+  (a, b) => b.data.publishDate.getTime() - a.data.publishDate.getTime(),
+);
 ---
 
 <BaseLayout
   title="Blog"
-  description="Get all the latest news from Namesake."
+  description="The latest news from Namesake."
   color="blue"
 >
-  <PageHeader
-    title="Blog"
-    description="Get all the latest news from Namesake."
-  />
+  <PageHeader title="Blog" description="The latest news from Namesake." />
   <div class="posts">
     {
-      posts.length ? (
-        posts.map(async (post) => {
+      sortedPosts.length ? (
+        sortedPosts.map(async (post) => {
           const authors = await getEntries(post.data.authors);
           const authorsNames = authors.map((author) => author.data.name);
 
