--- a/src/pages/blog/[id].astro
+++ b/src/pages/blog/[id].astro
@@ -36,7 +36,7 @@ const authors = await getEntries(data.authors);
   date={data.publishDate}
   description={data.description}
   color="blue"
-  annotation="highlight"
+  annotation={data.annotation ?? "highlight"}
   headings={headings}
 >
   <div class="authors" slot="after-header">
@@ -52,14 +52,16 @@ const authors = await getEntries(data.authors);
               densities={[1, 2]}
             />
           )}
-          <strong>{author.data.name}</strong> <span>{author.data.role}</span>
+          <div class="author-info">
+            <strong>{author.data.name}</strong>
+            <span class="role">{author.data.role}</span>
+          </div>
         </span>
       ))
     }
   </div>
   <Content />
   <div class="bios" slot="after-content">
-    <hr class="divider" />
     {
       authors.map(({ data: { avatar, name, bio, socialLinks } }) => (
         <div class="bio">
@@ -94,38 +96,40 @@ const authors = await getEntries(data.authors);
   </div>
 </ProseLayout>
 
-<script>
-  import { annotate } from "rough-notation";
-
-  const divider: HTMLElement | null = document.querySelector(".divider");
-  if (divider) {
-    const highlight = annotate(divider, {
-      type: "underline",
-      iterations: 1,
-      animate: false,
-    });
-    highlight.show();
-  }
-</script>
-
 <style lang="scss">
   .authors {
     display: flex;
     flex-direction: column;
-    gap: var(--space-2xs);
+    gap: var(--space-s);
     padding-bottom: var(--space-2xl);
   }
 
   .author {
     display: inline-flex;
     align-items: center;
-    gap: var(--space-xs);
+    gap: var(--space-s);
+
+    .author-info {
+      display: inline-flex;
+      align-items: baseline;
+      gap: var(--space-xs);
+
+      @media (width <= 600px) {
+        flex-direction: column;
+        gap: 0;
+      }
+    }
+
+    .role {
+      font-size: var(--step--1);
+    }
   }
 
   .avatar {
     border-radius: 100%;
-    filter: grayscale(100%) contrast(140%);
+    filter: grayscale(100%);
     mix-blend-mode: multiply;
+    transform: translate3d(0, 0, 0);
     user-select: none;
   }
 
@@ -137,15 +141,11 @@ const authors = await getEntries(data.authors);
     border-radius: 100%;
   }
 
-  .divider {
-    border: 0;
-    margin-block: var(--space-2xl);
-  }
-
   .bios {
     display: flex;
     flex-direction: column;
     gap: var(--space-xl);
+    margin-block-start: var(--space-3xl);
   }
 
   .bio {
