Update homepage and tagline

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,8 @@ const { Content } = await render(entry);
 <BaseLayout title={siteInfo.name} description={siteInfo.description}>
   <div class="home">
     <h1>
-      <span>Be seen for</span><br /><span class="who-you-are">who you are.</span
+      <span>Your name is</span><br /><span class="hero-highlight"
+        >yours to change</span
       >
     </h1>
     <div class="hero">
@@ -36,9 +37,13 @@ const { Content } = await render(entry);
 <script>
   import { annotate } from "rough-notation";
 
-  const whoYouAre: HTMLElement | null = document.querySelector(".who-you-are");
-  if (whoYouAre) {
-    const highlight = annotate(whoYouAre, {
+  const heroHighlight: HTMLElement | null =
+    document.querySelector(".hero-highlight");
+
+  const isForcedColors = window.matchMedia("(forced-colors: active)").matches;
+  if (heroHighlight && !isForcedColors) {
+    heroHighlight.style.color = "var(--bg)";
+    const highlight = annotate(heroHighlight, {
       type: "highlight",
       iterations: 1,
     });
@@ -80,14 +85,23 @@ const { Content } = await render(entry);
     pointer-events: none;
     mix-blend-mode: multiply;
     animation: slideInUp 0.6s ease-out 0.3s both;
+
+    @media (forced-colors: active) {
+      filter: invert(1);
+      mix-blend-mode: screen;
+    }
   }
 
   h1 {
     text-align: center;
-    font-size: var(--step-7);
+    font-size: var(--step-5);
 
-    @media (width < 420px) {
+    @media (width >= 420px) {
       font-size: var(--step-6);
+    }
+
+    @media (width >= 600px) {
+      font-size: var(--step-7);
     }
 
     span {
@@ -95,15 +109,16 @@ const { Content } = await render(entry);
     }
   }
 
-  .who-you-are {
+  .hero-highlight {
     color: var(--bg);
   }
 
   .content {
     padding-block-start: var(--space-xl);
-    max-width: 760px;
+    max-width: 860px;
     font-size: var(--step-1);
     animation: slideInUp 0.6s ease-out 0.6s both;
+    text-wrap: pretty;
 
     :global(p) + :global(p) {
       margin-top: var(--space-l);
@@ -112,5 +127,17 @@ const { Content } = await render(entry);
     @media (width < 540px) {
       font-size: var(--step-0);
     }
+  }
+
+  .buttons {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: var(--space-l);
+    margin-block-start: var(--space-3xl);
+  }
+
+  .icon {
+    margin-inline-end: calc(var(--space-2xs) * -1);
   }
 </style>
