content: App launch blog post (#223)

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -10,7 +10,7 @@ const { urls } = siteInfo;
   <nav>
     <a href="/blog" class="button ghost small">Blog</a>
     <a href="/donate" class="button secondary small">Donate</a>
-    <a href="/chat" class="button primary small">Chat</a>
+    <a href={urls.app} class="button primary small">Sign In</a>
   </nav>
 </header>
 
