Add Sloane video and integration for YouTube embeds

--- a/src/layouts/ProseLayout.astro
+++ b/src/layouts/ProseLayout.astro
@@ -154,6 +154,7 @@ const {
   }
 
   .prose:not(.not-content) {
+    width: 100%;
     max-width: 720px;
     margin-inline-end: auto;
     grid-area: prose;
@@ -233,5 +234,9 @@ const {
       border-color: transparent;
       margin-block: var(--space-2xl);
     }
+  }
+
+  lite-youtube:not(.lyt-activated) {
+    mix-blend-mode: luminosity;
   }
 </style>
