--- a/src/components/ArticleLink.astro
+++ b/src/components/ArticleLink.astro
@@ -73,8 +73,8 @@ const { title, date, url, subhead, authors, description, image } = Astro.props;
   }
 
   .description {
-    text-wrap: balance;
-    max-width: 40ch;
+    text-wrap: pretty;
+    max-width: 48ch;
   }
 
   .image {
