--- a/src/components/ArticleLink.astro
+++ b/src/components/ArticleLink.astro
@@ -1,5 +1,5 @@
 ---
-import { Image, type ImageMetadata } from "astro:assets";
+import { Image } from "astro:assets";
 import dayjs from "dayjs";
 import utc from "dayjs/plugin/utc";
 
