Conditional author bios

--- a/src/pages/blog/[id].astro
+++ b/src/pages/blog/[id].astro
@@ -63,39 +63,41 @@ const authors = data.authors ? await getEntries(data.authors) : [];
     )
   }
   <Content />
-  <div class="bios" slot="after-content">
-    {
-      authors.map(({ data: { avatar, name, bio, socialLinks } }) => (
-        <div class="bio">
-          <div class="bio-avatar">
-            <Image
-              class="avatar"
-              src={avatar}
-              alt={`${name} photo`}
-              width={80}
-              height={80}
-              densities={[1, 2]}
-            />
+  {
+    authors.length > 0 && (
+      <div class="bios" slot="after-content">
+        {authors.map(({ data: { avatar, name, bio, socialLinks } }) => (
+          <div class="bio">
+            <div class="bio-avatar">
+              <Image
+                class="avatar"
+                src={avatar}
+                alt={`${name} photo`}
+                width={80}
+                height={80}
+                densities={[1, 2]}
+              />
+            </div>
+            <div class="content">
+              <strong>{name}</strong>
+              <p>{bio}</p>
+              {socialLinks && socialLinks.length > 0 && (
+                <ul class="social">
+                  {socialLinks.map((socialLink) => (
+                    <li>
+                      <a href={socialLink.url} target="_blank">
+                        {socialLink.name}
+                      </a>
+                    </li>
+                  ))}
+                </ul>
+              )}
+            </div>
           </div>
-          <div class="content">
-            <strong>{name}</strong>
-            <p>{bio}</p>
-            {socialLinks && socialLinks.length > 0 && (
-              <ul class="social">
-                {socialLinks.map((socialLink) => (
-                  <li>
-                    <a href={socialLink.url} target="_blank">
-                      {socialLink.name}
-                    </a>
-                  </li>
-                ))}
-              </ul>
-            )}
-          </div>
-        </div>
-      ))
-    }
-  </div>
+        ))}
+      </div>
+    )
+  }
 </ProseLayout>
 
 <style lang="scss">
