--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -183,7 +183,7 @@ const linkGroups: LinkGroup[] = [
       align-items: stretch;
 
       a {
-        font-size: var(--step--1);
+        font-size: var(--step-0);
         border-radius: 5px;
       }
     }
@@ -195,7 +195,13 @@ const linkGroups: LinkGroup[] = [
       width: 12ch;
 
       > * {
-        padding-block: var(--space-2xs);
+        padding-block: var(--space-xs);
+      }
+
+      @media (width < 900px) {
+        > * {
+          padding-block: var(--space-s);
+        }
       }
     }
 
