--- a/src/pages/blog/[id].astro
+++ b/src/pages/blog/[id].astro
@@ -35,6 +35,8 @@ const authors = data.authors ? await getEntries(data.authors) : [];
   title={data.title}
   date={data.publishDate}
   description={data.description}
+  ogImage={data.image?.src}
+  ogAlt={data.imageAlt}
   color="blue"
   annotation={data.annotation ?? "highlight"}
   headings={headings}
