--- a/src/pages/blog/[id].astro
+++ b/src/pages/blog/[id].astro
@@ -37,6 +37,7 @@ const authors = data.authors ? await getEntries(data.authors) : [];
   description={data.description}
   ogImage={data.image?.src}
   ogAlt={data.imageAlt}
+  author={authors.map((author) => author.data.name).join(", ")}
   color="blue"
   annotation={data.annotation ?? "highlight"}
   headings={headings}
