--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,9 +15,8 @@ const { Content } = await render(entry);
 <BaseLayout title={siteInfo.name} description={siteInfo.description}>
   <div class="home">
     <h1>
-      <span>Your name is</span><br /><span class="hero-highlight"
-        >yours to change</span
-      >
+      <span>Your name is</span>
+      <span class="hero-highlight">yours to change</span>
     </h1>
     <div class="hero">
       <Image
