--- a/src/layouts/ProseLayout.astro
+++ b/src/layouts/ProseLayout.astro
@@ -11,6 +11,7 @@ interface Props {
   title: string;
   date?: Date;
   description?: string;
+  author?: string;
   ogImage?: string;
   ogAlt?: string;
   annotation?: RoughAnnotationType;
@@ -22,6 +23,7 @@ const {
   title,
   date,
   description,
+  author,
   ogImage,
   ogAlt,
   annotation,
@@ -33,6 +35,7 @@ const {
 <BaseLayout
   title={title}
   description={description && smartquotes(description)}
+  author={author}
   ogImage={ogImage}
   ogAlt={ogAlt}
   color={color}
