Improve accessibility of navigation list

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,14 +3,22 @@ import siteInfo from "~/data/site-info";
 import Logo from "./Logo.astro";
 
 const { urls } = siteInfo;
+const { pathname } = Astro.url;
 ---
 
 <header>
-  <a href="/" aria-label="Namesake homepage" id="logo"><Logo /></a>
-  <nav>
-    <a href="/blog" class="button ghost small">Blog</a>
-    <a href="/donate" class="button secondary small">Donate</a>
-    <a href={urls.app} class="button primary small">Sign In</a>
+  <a href="/" aria-label="Home" id="logo"><Logo /></a>
+  <nav aria-label="Site">
+    <ul role="list">
+      <li>
+        <a
+          href="/blog"
+          aria-current={pathname.slice(1) === "blog" ? "page" : "false"}
+          class="button ghost small">Blog</a>
+      </li>
+      <li><a href="/donate" class="button secondary small">Donate</a></li>
+      <li><a href={urls.app} class="button primary small">Sign In</a></li>
+    </ul>
   </nav>
 </header>
 
@@ -28,22 +36,23 @@ const { urls } = siteInfo;
     top: 0;
     display: flex;
     align-items: center;
-    justify-content: flex-start;
-    padding: var(--space-l);
+    justify-content: space-between;
+    padding: var(--space-m) var(--space-l);
     width: 100%;
     max-width: 1200px;
     margin-inline: auto;
   }
 
-  a {
-    padding: var(--space-xs) var(--space-s);
-    margin: calc(var(--space-xs) * -1);
-    border-radius: 5px;
-  }
-
-  nav {
+  ul {
+    list-style: none;
     display: flex;
-    gap: var(--space-l);
-    margin-inline-start: auto;
+    padding: unset;
+    margin: unset;
+    gap: var(--space-xs);
+
+    a {
+      padding: var(--space-xs) var(--space-s);
+      border-radius: 5px;
+    }
   }
 </style>
