--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -44,6 +44,10 @@ const { pathname } = Astro.url;
     margin-inline: auto;
   }
 
+  #logo {
+    transform: translateY(2px);
+  }
+
   ul {
     list-style: none;
     display: flex;
