--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -65,7 +65,7 @@ const { pathname } = Astro.url;
       &:hover {
         text-decoration: underline;
         text-decoration-thickness: 2px;
-        text-underline-offset: 1.5px;
+        text-underline-offset: 0.1em;
       }
     }
   }
