Add Bluesky social link to footer

--- a/src/pages/brand-assets/index.astro
+++ b/src/pages/brand-assets/index.astro
@@ -1,5 +1,5 @@
 ---
-import { RiDownloadLine } from "react-icons/ri";
+import { RiDownloadLine } from "@remixicon/react";
 import PageHeader from "~/components/PageHeader.astro";
 import BaseLayout from "~/layouts/BaseLayout.astro";
 import BrandAssetCard from "./_components/BrandAssetCard.astro";
