--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 import { Image } from "astro:assets";
 import { getEntry, render } from "astro:content";
-import { RiArrowRightLine } from "react-icons/ri";
+import { RiArrowRightLine } from "@remixicon/react";
 import Partners from "~/components/Partners.astro";
 import heroIllustration from "~/content/pages/_images/hero-form.png";
 import siteInfo from "~/data/site-info";
