--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,5 +1,5 @@
 ---
-import { RiHeart3Line } from "react-icons/ri";
+import { RiHeart3Line } from "@remixicon/react";
 import siteInfo from "~/data/site-info";
 import Subscribe from "./Subscribe.astro";
 
