--- a/src/pages/brand-assets/_components/BrandAssetCard.astro
+++ b/src/pages/brand-assets/_components/BrandAssetCard.astro
@@ -1,5 +1,5 @@
 ---
-import { RiDownloadLine } from "react-icons/ri";
+import { RiDownloadLine } from "@remixicon/react";
 
 export type Props = {
   name: string;
